# GIS

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphGenerator.h  MemoryHooks.cpp  MemoryHooks.h  README.md  Util.h  Vertex.cpp  Vertex.h  config.h.in  main.cpp  tests_acceptance.cpp  tests_graph.cpp  tests_memory_hooks.cpp  tests_vertex.cpp
acceptance/: tinyDG2.txt  tinyFull.txt  tinyParallelEdges.txt  tinySCG.txt
tools/: run.sh
tools/benchmark/: result.csv
tools/benchmark/partials/: result_100.csv  result_1000.csv  result_1300.csv  result_1400.csv  result_1500.csv  result_1800.csv  result_200.csv  result_2100.csv  result_2300.csv  result_2600.csv  result_2700.csv  result_2800.csv  result_2900.csv  result_300.csv  result_3000.csv  result_3100.csv  result_3200.csv  result_3300.csv  result_3400.csv  result_3800.csv  result_3900.csv  result_4000.csv  result_4100.csv  result_4200.csv  result_4500.csv  result_4600.csv  result_4700.csv  result_500.csv  result_5000.csv  result_5100.csv  result_5200.csv  result_5300.csv  result_5700.csv  result_6200.csv  result_6300.csv  result_6700.csv  result_6800.csv  result_7000.csv  result_900.csv
tools/benchmark_2016-06-02_00-59-32/: result.csv  result.txt
tools/benchmark_2016-06-02_00-59-32/partials/: result_1100.csv  result_1200.csv  result_1600.csv  result_1700.csv  result_1900.csv  result_2000.csv  result_2200.csv  result_2400.csv  result_2500.csv  result_3500.csv  result_3600.csv  result_3700.csv  result_400.csv  result_4300.csv  result_4400.csv  result_4800.csv  result_4900.csv  result_5000.csv  result_600.csv  result_700.csv  result_800.csv
tools/benchmark_2016-06-02_07-30-15/: result.csv  result.txt
tools/benchmark_2016-06-02_07-30-15/partials/: result_5400.csv  result_5500.csv  result_5600.csv  result_5800.csv  result_5900.csv  result_6000.csv
tools/benchmark_2016-06-02_20-14-54/: result.csv  result.txt
tools/benchmark_2016-06-02_20-14-54/partials/: result_6100.csv  result_6400.csv  result_6500.csv  result_6600.csv  result_6900.csv
